# smart_circadian_lighting

./: .gitignore  LICENSE  manual_overrides.md  pyproject.toml  pytest.ini  requirements-dev.txt  zwave_implementation_plan.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
custom_components/smart_circadian_lighting/: __init__.py  binary_sensor.py  button.py  circadian_logic.py  color_temp_logic.py  config_flow.py  const.py  light.py  manifest.json  sensor.py  services.yaml  state_management.py  switch.py  testing.py
custom_components/smart_circadian_lighting/translations/: en.json
docs/: CHANGELOG.md  CONTRIBUTING.md  README.md
tests/: conftest.py  test_button.py  test_circadian_logic.py  test_color_temp_logic.py  test_false_override_prevention.py  test_kasa_98_percent_reproduction.py  test_light.py  test_manual_overrides.py  test_morning_routine_override.py  test_override_repro.py  test_state_management.py  test_zwave_in_direction_override.py  test_zwave_soft_override.py
